Use HTML5 DOCTYPE, try to fix some layout issues

--- a/main.css
+++ b/main.css
@@ -83,9 +83,8 @@ tr         { height:  15px; }
   width: 272px;
 }
 
-#Inventory, #Inventory table {
-  width: 270px;
-}
+#Inventory       { width: 270px; }
+#Inventory table { width: 254px; }
 
 #Equips th,             #Equips td             { width: 202px; }
 #Equips th:first-child, #Equips td:first-child { width:  70px; }
@@ -96,6 +95,10 @@ tr         { height:  15px; }
 
 #Spells .value { 
  width: 15ex;
+}
+
+#Inventory .value {
+  width: 6ex;
 }
 
 #TaskBar, #TaskBar .hint { 
